apt-cacher-ng/prod/patch_pod_details.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apt-cacher-ng
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: apt-cacher-ng-data
