apt-cacher-ng/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-cacher-ng
spec:
  type: ClusterIP
  loadBalancerIP:
